objects/BA_GS_Assignment__c.object
<CustomObject>
    <description>Benefit Agreement assigned to Group Section information for the Group Account will be stored using this object</description>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <description>Benefit Agreement related to the Group Section</description>
        <label>Benefit Agreement</label>
        <referenceTo>Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Group Sections Assigned</relationshipLabel>
        <relationshipName>BA_GS_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Stores the External ID from Source System for Upsert Operation (Concatenation of Business Agreement and Group Section Unique ID</description>
        <externalId>true</externalId>
        <label>BAGSA External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Section__c</fullName>
        <description>Group Section related to the Assignment</description>
        <label>Group Section</label>
        <referenceTo>Group_Section__c</referenceTo>
        <relationshipLabel>Benefit Agreements Assigned</relationshipLabel>
        <relationshipName>BA_GS_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Number_Of_GS_Active_Health_Members__c</fullName>
        <formula>Group_Section__r.Total_Healthcare_Active_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of GS Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Active_Health_Members__c</fullName>
        <label>Total Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BA GS Assignment</label>
    <nameField>
        <displayFormat>BAGS-{00000000}</displayFormat>
        <label>BA GS Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BA GS Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>